testing crud